 	- remove unused bus error names;
 	- avoid considering dpkg temporary files relevant for anything;
 	- allow strappenda to take any number of args;
 	- move status line ellipsation to 50% of the line;
 	- never try to create files in cgroupfs, only open them for writing;
 	- make is_localhost() check for 'localdomain' too;
 	- const'ify MIN/MAX/... macros;
 	- add CONST_MAX() macro;
 * virt:
 	- rework container detection logic;
 	- detect s390 virtualization;
 * tmpfiles:
 	- remove unused /run/systemd/ask-password directory;
 	- change return type to void in help function;
 * po:
 	- add Ukrainian translation;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 	- document yearly and annually in systemd.time(7);
 	- update systemd-analyze page;
 	- remove repeating words;
 	- fix path for system-sleep hook directory;
 	- correct references to DefaultTimeout*Sec;
 	- document that we look for both the instance's and
 	  the template's .d/ directory when looking for unit file drop-ins;
 	- improve documentation for StandardOutput= and StandardInput=;
 	- drop references to removed and obsolete 'systemctl load' command;
 * tests:
 	- remove test-ring test;
 	- add tests to test-tables;
 	- fix access to unit load path;
 	- pass on kernels without memory controller;
 	- fix masks in test-cgroup-mask test;
 	- add test-cgroup-mask test;
 	- add test units;
 	- add test which shows access to random memory to test-strv;
 	- use fabs on doubles in test-util;
 	- move test-device-nodes test to separate module udev;
 	- fix strtod test for real in test-util;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 	- allow systemd to manage loop device partitions;
 * sysctl:
 	- enable promote_secondaries by default;